# llm-switchboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  trivy.yml
docs/: ARCHITECTURE.md  DECISIONS.md
llm_switchboard/: __init__.py  cache.py  cli.py  compat.py  config.py  endpoint.py  free_tier.py  models.py  session.py  tui.py  util.py  webui.py
tests/: test_cache.py  test_cli.py  test_compat.py  test_config.py  test_endpoint.py  test_free_tier.py  test_models.py  test_session.py  test_util.py  test_webui.py
