[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-switchboard"
dynamic = ["version"]
description = "Interactive model picker for Claude Code via Open WebUI"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/llm-switchboard/llm-switchboard"
Repository = "https://github.com/llm-switchboard/llm-switchboard"
Issues = "https://github.com/llm-switchboard/llm-switchboard/issues"

[project.scripts]
llm-switchboard = "llm_switchboard.cli:main"

[tool.setuptools.dynamic]
version = {attr = "llm_switchboard.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "UP007"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
check_untyped_defs = false
